ghc-6.2/hslibs/win32/Win32NLS_stub_ffi.h

extern WORD prim_lANG_NEUTRAL();
extern WORD prim_lANG_BULGARIAN();
extern WORD prim_lANG_CHINESE();
extern WORD prim_lANG_CZECH();
extern WORD prim_lANG_DANISH();
extern WORD prim_lANG_GERMAN();
extern WORD prim_lANG_GREEK();
extern WORD prim_lANG_ENGLISH();
extern WORD prim_lANG_SPANISH();
extern WORD prim_lANG_FINNISH();
extern WORD prim_lANG_FRENCH();
extern WORD prim_lANG_HUNGARIAN();
extern WORD prim_lANG_ICELANDIC();
extern WORD prim_lANG_ITALIAN();
extern WORD prim_lANG_JAPANESE();
extern WORD prim_lANG_KOREAN();
extern WORD prim_lANG_DUTCH();
extern WORD prim_lANG_NORWEGIAN();
extern WORD prim_lANG_POLISH();
extern WORD prim_lANG_PORTUGUESE();
extern WORD prim_lANG_ROMANIAN();
extern WORD prim_lANG_RUSSIAN();
extern WORD prim_lANG_CROATIAN();
extern WORD prim_lANG_SLOVAK();
extern WORD prim_lANG_SWEDISH();
extern WORD prim_lANG_TURKISH();
extern WORD prim_lANG_SLOVENIAN();
extern WORD prim_lANG_ARABIC();
extern WORD prim_lANG_CATALAN();
extern WORD prim_lANG_HEBREW();
extern WORD prim_lANG_SERBIAN();
extern WORD prim_lANG_ALBANIAN();
extern WORD prim_lANG_THAI();
extern WORD prim_lANG_URDU();
extern WORD prim_lANG_INDONESIAN();
extern WORD prim_lANG_BELARUSIAN();
extern WORD prim_lANG_ESTONIAN();
extern WORD prim_lANG_LATVIAN();
extern WORD prim_lANG_LITHUANIAN();
extern WORD prim_lANG_FARSI();
extern WORD prim_lANG_VIETNAMESE();
extern WORD prim_lANG_ARMENIAN();
extern WORD prim_lANG_AZERI();
extern WORD prim_lANG_BASQUE();
extern WORD prim_lANG_MACEDONIAN();
extern WORD prim_lANG_AFRIKAANS();
extern WORD prim_lANG_GEORGIAN();
extern WORD prim_lANG_FAEROESE();
extern WORD prim_lANG_HINDI();
extern WORD prim_lANG_MALAY();
extern WORD prim_lANG_KAZAK();
extern WORD prim_lANG_SWAHILI();
extern WORD prim_lANG_UZBEK();
extern WORD prim_lANG_TATAR();
extern WORD prim_lANG_BENGALI();
extern WORD prim_lANG_PUNJABI();
extern WORD prim_lANG_GUJARATI();
extern WORD prim_lANG_ORIYA();
extern WORD prim_lANG_TAMIL();
extern WORD prim_lANG_TELUGU();
extern WORD prim_lANG_KANNADA();
extern WORD prim_lANG_MALAYALAM();
extern WORD prim_lANG_ASSAMESE();
extern WORD prim_lANG_MARATHI();
extern WORD prim_lANG_SANSKRIT();
extern WORD prim_lANG_KONKANI();
extern WORD prim_lANG_MANIPURI();
extern WORD prim_lANG_SINDHI();
extern WORD prim_lANG_KASHMIRI();
extern WORD prim_lANG_NEPALI();
extern WORD prim_mAKELANGID(WORD arg1,WORD arg2);
extern DWORD prim_mAKELCID(WORD arg1,WORD arg2);
extern WORD prim_pRIMARYLANGID(WORD arg1);
extern WORD prim_sUBLANGID(WORD arg1);
extern WORD prim_sORTIDFROMLCID(DWORD arg1);
extern WORD prim_sORT_DEFAULT();
extern WORD prim_sORT_JAPANESE_XJIS();
extern WORD prim_sORT_JAPANESE_UNICODE();
extern WORD prim_sORT_CHINESE_BIG5();
extern WORD prim_sORT_CHINESE_UNICODE();
extern WORD prim_sORT_KOREAN_KSC();
extern WORD prim_sORT_KOREAN_UNICODE();