ghc-6.2/hslibs/win32/Win32NLS.hs


foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_NEUTRAL" lANG_NEUTRAL :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_BULGARIAN" lANG_BULGARIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_CHINESE" lANG_CHINESE :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_CZECH" lANG_CZECH :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_DANISH" lANG_DANISH :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_GERMAN" lANG_GERMAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_GREEK" lANG_GREEK :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_ENGLISH" lANG_ENGLISH :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_SPANISH" lANG_SPANISH :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_FINNISH" lANG_FINNISH :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_FRENCH" lANG_FRENCH :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_HUNGARIAN" lANG_HUNGARIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_ICELANDIC" lANG_ICELANDIC :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_ITALIAN" lANG_ITALIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_JAPANESE" lANG_JAPANESE :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_KOREAN" lANG_KOREAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_DUTCH" lANG_DUTCH :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_NORWEGIAN" lANG_NORWEGIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_POLISH" lANG_POLISH :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_PORTUGUESE" lANG_PORTUGUESE :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_ROMANIAN" lANG_ROMANIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_RUSSIAN" lANG_RUSSIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_CROATIAN" lANG_CROATIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_SLOVAK" lANG_SLOVAK :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_SWEDISH" lANG_SWEDISH :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_TURKISH" lANG_TURKISH :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_SLOVENIAN" lANG_SLOVENIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_ARABIC" lANG_ARABIC :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_CATALAN" lANG_CATALAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_HEBREW" lANG_HEBREW :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_SERBIAN" lANG_SERBIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_ALBANIAN" lANG_ALBANIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_THAI" lANG_THAI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_URDU" lANG_URDU :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_INDONESIAN" lANG_INDONESIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_BELARUSIAN" lANG_BELARUSIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_ESTONIAN" lANG_ESTONIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_LATVIAN" lANG_LATVIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_LITHUANIAN" lANG_LITHUANIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_FARSI" lANG_FARSI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_VIETNAMESE" lANG_VIETNAMESE :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_ARMENIAN" lANG_ARMENIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_AZERI" lANG_AZERI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_BASQUE" lANG_BASQUE :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_MACEDONIAN" lANG_MACEDONIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_AFRIKAANS" lANG_AFRIKAANS :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_GEORGIAN" lANG_GEORGIAN :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_FAEROESE" lANG_FAEROESE :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_HINDI" lANG_HINDI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_MALAY" lANG_MALAY :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_KAZAK" lANG_KAZAK :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_SWAHILI" lANG_SWAHILI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_UZBEK" lANG_UZBEK :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_TATAR" lANG_TATAR :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_BENGALI" lANG_BENGALI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_PUNJABI" lANG_PUNJABI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_GUJARATI" lANG_GUJARATI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_ORIYA" lANG_ORIYA :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_TAMIL" lANG_TAMIL :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_TELUGU" lANG_TELUGU :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_KANNADA" lANG_KANNADA :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_MALAYALAM" lANG_MALAYALAM :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_ASSAMESE" lANG_ASSAMESE :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_MARATHI" lANG_MARATHI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_SANSKRIT" lANG_SANSKRIT :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_KONKANI" lANG_KONKANI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_MANIPURI" lANG_MANIPURI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_SINDHI" lANG_SINDHI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_KASHMIRI" lANG_KASHMIRI :: PrimaryLANGID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_lANG_NEPALI" lANG_NEPALI :: PrimaryLANGID

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_mAKELANGID" mAKELANGID :: PrimaryLANGID -> SubLANGID -> LANGID

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_mAKELCID" mAKELCID :: LANGID -> SortID -> LCID

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_pRIMARYLANGID" pRIMARYLANGID :: LANGID -> PrimaryLANGID

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sUBLANGID" sUBLANGID :: LANGID -> SubLANGID

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sORTIDFROMLCID" sORTIDFROMLCID :: LCID -> SortID

type SortID = WORD

foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sORT_DEFAULT" sORT_DEFAULT :: SortID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sORT_JAPANESE_XJIS" sORT_JAPANESE_XJIS :: SortID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sORT_JAPANESE_UNICODE" sORT_JAPANESE_UNICODE :: SortID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sORT_CHINESE_BIG5" sORT_CHINESE_BIG5 :: SortID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sORT_CHINESE_UNICODE" sORT_CHINESE_UNICODE :: SortID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sORT_KOREAN_KSC" sORT_KOREAN_KSC :: SortID
foreign import  ccall unsafe "Win32NLS_stub_ffi.h prim_sORT_KOREAN_UNICODE" sORT_KOREAN_UNICODE :: SortID
